force-app/main/default/objects/Service_Template__c/Service_Template__c.object-meta.xml
<CustomObject>
    <label>Service Template</label>
    <nameField>
        <label>Service Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>