force-app/main/default/objects/Service_Template__c/fields/Service_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Service_Schedule__c</fullName>
    <label>Service Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>