force-app/main/default/objects/Service_Template__c/fields/Service_Template_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Template_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Service Template External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>