force-app/main/default/objects/Service_Template__c/fields/Service_Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Template_Type__c</fullName>
    <label>Service Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Template_Type</valueSetName>
    </valueSet>
</CustomField>