force-app/main/default/objects/Service_Template__c/fields/Total_Services__c.field-meta.xml
<CustomField>
    <fullName>Total_Services__c</fullName>
    <label>Total Services</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>