force-app/main/default/objects/Service_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Services__c</columns>
    <columns>Service_Schedule__c</columns>
    <columns>AFM_Zone__c</columns>
    <columns>Frequency_Factor__c</columns>
    <columns>Service_Template_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>