force-app/main/default/objects/Service_Template__c/listViews/All_Service_Templates.listView-meta.xml
<ListView>
    <fullName>All_Service_Templates</fullName>
    <columns>NAME</columns>
    <columns>Service_Schedule__c</columns>
    <columns>Total_Services__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Templates</label>
</ListView>